tests/fixtures/invalid/pow_bytes_none_bytes.py
# Cannot call pow() with Bytes, None, Bytes
x = pow(b"hello", None, b"hello")
